--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.systems.unittesting">
+    package="com.erselan.unittesting">
 
     <application
-        android:name=".UnitTestingApp"
+        android:name="com.erselan.unittesting.UnitTestingApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UnitTesting">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name="com.erselan.unittesting.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
